--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.8.8",
+    "gulp-ruby-sass": "*",
+    "laravel-elixir-ruby-sass": "*",
     "laravel-elixir": "*"
   }
 }
