--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,5 +1,5 @@
 suites:
     main:
-        namespace: App
-        psr4_prefix: App
+        namespace: Mandible
+        psr4_prefix: Mandible
         src_path: app
