--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"illuminate/html": "5.*",
         "predis/predis": "1.1.*@dev",
 		"barryvdh/laravel-ide-helper": "~2.0",
-		"barryvdh/laravel-debugbar": "~2.0"
+		"barryvdh/laravel-debugbar": "~2.0",
+		"michelf/php-markdown": "^1.5"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
